[package]
name = "sunrise-lamp"
version = "0.1.0"
authors = ["sampeksi"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "sunrise-lamp"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
# Features "httpd" and "nvs" are removed; they are now part of the default "std" support
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-idf-hal = "0.46.2"
anyhow = "1.0"
embedded-svc = "0.29.0"
chrono = "0.4"

[build-dependencies]
embuild = "0.33"
